fixed text align

--- a/src/Components/Features/Features.module.css
+++ b/src/Components/Features/Features.module.css
@@ -42,7 +42,8 @@
     font-size: 16px;
     color: white;
     /* background-color: brown; */
-    padding: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-top: 0;
     position: relative;
     z-index: 2;
